style.css
body{
    background-color:  hsl(233, 47%, 7%);
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 15px;
    /* overflow: hidden; */
}
.description-mobile{
    display: none;
}
.container{
    display: grid;
    /* border: 1px solid gold; */
    /* margin: 100px; */
    grid-template-columns: repeat(2,540px);
    grid-template-rows:  446px;
    grid-template-areas: "content" "image";
    
}

.text-content{
    background-color: hsl(244, 38%, 16%);
    grid-column: 1 /2 ;
}

.image{
    grid-column: 2 / 3;
    background: url('images/image-header-desktop.jpg');
    height: 100%;
    position: relative;
    /* z-index: 1; */
}
.overlay{
    grid-column: 2 / 3;
    position: absolute;
    margin: 0;
    width: 100%;
    height: 100%;
    /* z-index: 0; */
    /* background: hsl(277, 64%, 61%) ; */
    /* opacity: 0.4; */
    /* background: rgba(170,92,219, 0.55); */
    background: rgba(103, 5, 163, 0.55);
    
}

.text-content{
    display: grid;
    grid-template-rows: repeat(3,1fr);
}

h2{
    margin-top: 0;
    /* border: 1px solid white; */
    font-family: 'Inter', sans-serif;
    font-size: 2.5rem;
    font-weight: 700;
    padding: 3rem;
    padding-bottom: 2.5rem;
    color: hsl(0, 0%, 100%);
    margin-bottom: 0;
}
.insights{
    color: hsl(277, 64%, 61%); 
}

p{
    font-family: 'Inter', sans-serif;
    color: hsla(0, 0%, 100%, 0.75);
    /* border: 1px solid greenyellow; */
    margin-top: 0;
    padding: 3em;
    padding-top: 0;
    font-size: 1rem;
    font-weight: 400;
    word-spacing: 0.2rem;
    
}

.stats-footer{
    /* border: 1px solid yellow; */
    display: grid;
    grid-template-columns: repeat(3,1fr);
    font-family: 'Lexend Deca', sans-serif;
    
}

.stat{
    /* border: 1px solid white; */
    display : flex;
    flex-direction: column;
    padding-left: 3em;
}

.stat .value{
    font-size: 1.5rem;
}
.stat .type{
    text-transform: uppercase;
    color: hsla(0, 0%, 100%, 0.6);
    margin-top: 0.35rem;
}

@media only screen and (max-width: 450px){

    .container{
        display: grid;
        grid-template-columns: 0.8fr;
        grid-template-rows: 260px 1fr;
        width: 100%;
        height: 100%;
        margin: 3rem 1rem;
        
    
    }
    .image{
        grid-column: 1 /2;
        grid-row: 1 /2;
        
        background: url('images/image-header-mobile.jpg');
        width: 100%;
        
        position: relative;
        border: 1px solid red;
        background-size: cover;
    }
    .text-content{
        grid-row: 2 / 3;
    }
    .overlay{
        
        grid-row: 1 / 2;
        position: absolute;
        margin: 0;
        width: 100%;
        height: 100%;
        background: rgba(103, 5, 163, 0.55);
        
    }

    h2{
        font-size: 1.85rem;
        text-align: center;
        padding-bottom: 0;
    }
    .description-mobile{
        display: block;
        text-align: center;
        line-height: 1.5rem;
        margin-top: 0.5rem;
    }
    .description-desktop{
        display: none;
    }
    .para{
        display: block;
    }
}

